package Entites.Caracteristiques;

public class Dexterite extends BaseCaracteristique{
    public Dexterite(int caracteristique) {
        super(caracteristique);
    }
}
