package Entites.Caracteristiques;

public class Initiative extends BaseCaracteristique{
    public Initiative(int caracteristique) {
        super(caracteristique);
    }
}
