package Entites.Caracteristiques;

public class PointDeVie extends BaseCaracteristique{
    private PointDeVie(int caracteristique) {
        super(caracteristique);
    }
}
