package Entites.Caracteristiques;

public class Vitesse extends BaseCaracteristique{
    protected Vitesse(int caracteristique) {
        super(caracteristique);
    }
}
