package Entites.Personnages.Classes;

public class Guerrier {
}
