package Entites.Personnages.Classes;

public class Magicien {
}
