package Entites.Personnages.Classes;

public class Roublard {
}
