package Monstres;

public class Caracteristiques {
}
