package Objets.Arme;

public class ArmeCourante extends Arme {
    public ArmeCourante(String nom, int porte) {
        super(nom, porte);
    }
}
