package Objets.Arme;

public class ArmeDistance extends Arme {
    public ArmeDistance(String nom, int porte) {
        super(nom, porte);
    }
}
