package Objets.Arme;

public class ArmeGuerre extends Arme {
    public ArmeGuerre(String nom, int porte) {
        super(nom, porte);
    }
}
