package Objets.Armure;

public class ArmureLegere extends Armure {
    public ArmureLegere(String nom, int classe) {
        super(nom, classe);
    }
}
