package Personnages.Caracteristiques;

public class Force extends BaseCaracteristique{
    public Force(int caracteristique) {
        super(caracteristique);
    }
}
